# MuCalc-VST

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: DivisionTableComponent.cpp  DivisionTableComponent.h  NoteDivisions.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
